# cakeml-coq

./: .gitignore  README.md  _CoqProject  dune-project
cakeSemantics/: CakeAST.v  DecidabilityTheory.v  Evaluate.v  EvaluateTheory.v  FreeVars.v  Makefile.conf  Namespace.v  NamespaceTheory.v  RelationalBigStep.v  SemanticPrimitives.v  SemanticsAux.v  TLCbuffer.v  TypeSystem.v  Utils.v  Word.v  _CoqProject  dune
cakeSemantics/ffi/: FFI.v  SimpleIO.v
doc/: meeting_2019_06_13.md
examples/BasisRed/: .Makefile.d  BasisEvaluated.v  BasisPlus.v  DiffEvalTest.v  EvaluateExperiments.v  _CoqProject
examples/BasisRed/cakeTrans/: natPlus.sexp  natPlus.sml
examples/noBasis/: EvaluateTest.v  ExecNoBasis.v  Makefile.conf  _CoqProject
examples/noBasis/cakeTrans/: noBasis.coq  noBasis.sexp  noBasis.sml
examples/noBasisRed/: DiffEvalTest.v  Makefile.conf  NoBasis.v  _CoqProject
utils/: Makefile  Makefile.conf  _CoqProject  dune
